# slurml

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.trunk/: trunk.yaml
src/: auth.rs  auth_controller.rs  auth_service.rs  config.rs  controllers.rs  db.rs  main.rs  models.rs  responses.rs  slurml.rs  utils.rs
src/controllers/: auth_controller.rs
src/models/: users.rs
src/responses/: auth_responses.rs
src/services/: auth_service.rs
src/utils/: config.rs  db.rs  tools.rs
