[package]
name = "slurml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
env_logger = "*"
jsonwebtoken = "7.2.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
