[package]
name = "slurml"
version = "0.1.0"
edition = "2021"
description = "A RESTful interface for Slurm schedulers providing secure HTTP endpoints for job management without direct user login to HPC nodes."
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
license = "0BSD"

[dependencies]
# Web server framework
actix-web = { version = "4.0", features = ["openssl"] }

# Security and encryption
openssl = "0.10.38"
jsonwebtoken = "7.2.0"
argon2 = "0.5.3"

# Asynchronous runtime
tokio = { version = "1.0", features = ["full"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and environment configuration
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "sqlite"] }

# Logging
env_logger = "0.9.0"

# Utilities
chrono = "0.4"
clap = "3.0"
rand = "0.8"
